Fix long collapsed descriptions still showing in mobile

--- a/site/css/card.css
+++ b/site/css/card.css
@@ -29,7 +29,7 @@
 }
 
 .expand-contract {
-	margin-top: -200%;
+	margin-top: -400%;
 	transition: all 0.5s ease-in-out;
 	margin-bottom: 0;
 }
